# tk-beta

./: 404.html  LICENSE  NOTICE  README.md  docker-compose-v4.yml  docker-compose-v6.yml  index.html  install.sh  mkdocs.yml  panel_install.sh  sitemap.xml
ai-skill/: index.html
doc/: ai-skill.md  faq.md  index.md  install.md  postgresql.md  usage.md
faq/: index.html
go-backend/: Dockerfile  MIGRATION_PLAN.md  Makefile  go.mod  go.sum
go-gost/: main.go  version.go
install/: index.html
plans/: 001-fix-211-connectip-full-chain.md  004-forward-explicit-bind-self-occupy-release.md  005-forward-invalid-bindip-fallback-default.md  006-forward-save-missing-speed-limit-auto-clear.md  007-user-tunnel-save-missing-speed-limit-auto-clear.md  008-frontend-missing-speed-limit-consistency.md  009-restrict-user-forward-permissions.md  010-multi-entrance-exit-ip-restrictions.md  011-forward-service-legacy-compat-and-agent-rollout.md  012-allow-user-custom-inport-with-range-validation.md  013-forward-delete-notfound-compat-fix.md  013-tunnel-entry-port-validation.md  014-forward-port-occupancy-validation.md  015-forward-runtime-port-residual-cleanup.md  016-tunnel-runtime-bind-conflict-retry.md  017-pr-284-ui-followup-fixes.md  018-user-tunnel-disable-status-sync.md  020-ajax-no-refresh-ux.md  (+55 more)
tests/e2e/: README.md  __init__.py  conftest.py  example_test.py  pyproject.toml  test_api.py  test_auth.py  test_dashboard.py  test_user_ui.py  with_server.py
tests/e2e/fixtures/: __init__.py
tests/e2e/pages/: __init__.py
tests/e2e/utils/: __init__.py  api_client.py
(+253 files in other folders)
