[project]
name = "flvx-e2e-tests"
version = "0.1.0"
description = "E2E tests for FLVX Panel"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-html>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: End-to-end test requiring running servers",
    "auth: Test requires authentication",
    "slow: Slow running test",
    "api: API-only test (no browser needed)",
]
addopts = "-v --tb=short"
timeout = 60
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]